# epee-action-recognition

./: .gitignore  EXP08_README.md  INFERENCE_README.md  README.md  TEST_README.md  check.py  eda.ipynb  example_usage.md  install_test_deps.sh  pose_process_eda.ipynb  pose_test.py  pyproject.toml  pytest.ini  run_tests.py  setup.sh  show_pred_result_side.py  simple_test.py
configs/: exp00_cnn.yaml  exp03_lightgbm.yaml  exp04_lstm.yaml  exp05_lstm_improved.yaml  exp07_lstm_frame_diff.yaml  exp07_test.yaml  exp08_3d_pose_lstm.yaml  exp08_lightgbm.yaml
input/: metadata.json
input/raw_annotation/: via_project_13Jan2025_01h17m28s.json
scripts/: calibrate_and_predict.py  predict.py  predict_batch.py  predict_batch_with_video.py
src/: show_pred_result.py  show_pred_result_side.py
src/exp00/: dataset.py  model.py  train.py
src/exp01/: dataset.py  train.py
src/exp02/: dataset.py  model.py  train.py
src/exp03/: train.py
src/exp04/: train.py  train_outcome.py
src/exp05/: __init__.py  dataset.py  model.py  train.py  utils.py
src/exp06/: __init__.py  dataset.py  model.py  train.py  utils.py
src/exp07/: __init__.py  calibrate_and_predict.py  calibrate_model.py  calibration.py  dataset.py  model.py  train.py  utils.py
src/exp08/: __init__.py  dataset.py  model.py  train.py  utils.py
src/inference/: __init__.py  api.py  base.py
src/inference/predictors/: __init__.py  cnn_lstm_predictor.py  cnn_predictor.py  lightgbm_predictor.py  lstm_improved_predictor.py  lstm_predictor.py
src/inference/utils/: __init__.py  video_writer.py
src/preprocess/: analyze_3d_poses.py  prepare_3d_data_for_training.py  process_pose_preds.py  process_pose_preds_3d.py  process_raw_annotation.py  run_preprocess.py  video_to_frames.py
tests/: __init__.py  test_predict_scripts.py
tests/inference/: __init__.py  test_inference_video_output.py
tests/inference/utils/: __init__.py  (+1 more)
