[project]
name = "epee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.0",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "lightgbm>=4.5.0",
    "lightning>=2.5.0.post0",
    "mmcv>=2.2.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.5",
    "mmpose",
    "numpy==1.26.4",
    "openmim>=0.3.9",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.0",
    "timm>=1.0.13",
    "torch==2.1.0+cu118",
    "torchaudio==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "transformers>=4.48.1",
]


[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
    "https://download.pytorch.org/whl/cu118/torchaudio",
    "https://download.openmmlab.com/mmcv/dist/cu118/torch2.1.0/index.html",
]

[tool.uv.sources]
mmpose = { git = "https://github.com/open-mmlab/mmpose.git" }
